Lucene Change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================= Lucene 10.0.0 =======================

API Changes
---------------------

* LUCENE-10010: AutomatonQuery, CompiledAutomaton, RunAutomaton, RegExp
  classes no longer determinize NFAs. Instead it is the responsibility
  of the caller to determinize.  (Robert Muir)

* LUCENE-10368: IntTaxonomyFacets has been make pkg-private and serves only as an internal
  implementation detail of taxonomy-faceting. (Greg Miller)

* LUCENE-10400: Remove deprecated dictionary constructors in Kuromoji and Nori (Tomoko Uchida)

* LUCENE-10440: TaxonomyFacets and FloatTaxonomyFacets have been made pkg-private and only serve
  as internal implementation details of taxonomy-faceting. (Greg Miller)

* LUCENE-10431: MultiTermQuery.setRewriteMethod() has been removed. (Alan Woodward)

* LUCENE-10436: Remove deprecated DocValuesFieldExistsQuery, NormsFieldExistsQuery and
  KnnVectorFieldExistsQuery. (Zach Chen, Adrien Grand)

* LUCENE-10561: Reduce class/member visibility of all normalizer and stemmer classes. (Rushabh Shah)

* LUCENE-10266: Move nearest-neighbor search on points to core. (Rushabh Shah)

* LUCENE-10603: Remove SortedSetDocValues#NO_MORE_ORDS definition. (Greg Miller)

* GITHUB#11813: Remove Operations.isFinite: the recursive implementation could be problematic
  for large automatons (WildcardQuery, PrefixQuery, RegExpQuery, etc).  (taroplus, Robert Muir)

* GITHUB#11840: Query rewrite now takes an IndexSearcher instead of IndexReader to enable concurrent
  rewriting. (Patrick Zhai)

* GITHUB#11933: Remove IOContext from Directory#openChecksumInput. (Zach Chen)

* GITHUB#11814: Support deletions in IndexRearranger. (Stefan Vodita)

New Features
---------------------

* LUCENE-10010 Introduce NFARunAutomaton to run NFA directly. (Patrick Zhai)

* LUCENE-10626 Hunspell: add tools to aid dictionary editing: